force-app/main/default/objects/QuoteLineItem/fields/Hora_estimada__c.field-meta.xml
<CustomField>
    <fullName>Hora_estimada__c</fullName>
    <label>Hora estimada</label>
    <type>Time</type>
</CustomField>