force-app/main/default/objects/QuoteLineItem/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <formula>IF(INCLUDES(Taller__r.Niv__c, &quot;K&quot;), &quot;K; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;1&quot;), &quot;1; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;2&quot;), &quot;2; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;3&quot;), &quot;3; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;4&quot;), &quot;4; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;5&quot;), &quot;5; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;6&quot;), &quot;6; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;7&quot;), &quot;7; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;8&quot;), &quot;8; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;9&quot;), &quot;9; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;10&quot;), &quot;10; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;11&quot;), &quot;11; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;12&quot;), &quot;12; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;K-3&quot;), &quot;K-3; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;K-6&quot;), &quot;K-6; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;7-9&quot;), &quot;7-9; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;7-12&quot;), &quot;7-12; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;K-12&quot;), &quot;K-12; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;EEE&quot;), &quot;EEE; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;EEI&quot;), &quot;EEI; &quot;, &quot;&quot;) &amp;
IF(INCLUDES(Taller__r.Niv__c, &quot;EES&quot;), &quot;EES; &quot;, &quot;&quot;)</formula>
    <label>Nivel</label>
    <type>Text</type>
</CustomField>