force-app/main/default/objects/QuoteLineItem/fields/Recurso__c.field-meta.xml
<CustomField>
    <fullName>Recurso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>