force-app/main/default/objects/QuoteLineItem/fields/Taller__c.field-meta.xml
<CustomField>
    <fullName>Taller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taller</label>
    <referenceTo>Taller__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>