force-app/main/default/objects/QuoteLineItem/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>TEXT(
   CASE(
       MOD(HOUR(Hora_estimada__c), 12), 
       0, 12, 
       MOD(HOUR(Hora_estimada__c), 12)
   )
) 
&amp; &quot;:&quot; &amp; 
IF(MINUTE(Hora_estimada__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(MINUTE(Hora_estimada__c)) 
&amp; IF(HOUR(Hora_estimada__c) &gt;= 12, &quot; PM&quot;, &quot; AM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>